--- a/Trivial Compression.ipynb
+++ b/Trivial Compression.ipynb
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "5a1579b4",
+   "id": "326d4af8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,29 +144,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "e9476fe5",
+   "execution_count": 11,
+   "id": "80e995ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git add ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "5300e9b3",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "error: src refspec main does not match any\r\n",
-      "\u001b[31merror: failed to push some refs to 'https://github.com/shonendumm/classicComputerScienceProblemsPython.git'\r\n",
-      "\u001b[m"
+      "[master (root-commit) b362097] initial commit\r\n",
+      " 3 files changed, 346 insertions(+)\r\n",
+      " create mode 100644 .ipynb_checkpoints/Trivial Compression-checkpoint.ipynb\r\n",
+      " create mode 100644 .jovianrc\r\n",
+      " create mode 100644 Trivial Compression.ipynb\r\n"
      ]
     }
    ],
    "source": [
-    "!git branch -M master\n",
-    "!git push -u origin master"
+    "!git commit -m \"initial commit\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "4ecf2531",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enumerating objects: 6, done.\n",
+      "Counting objects: 100% (6/6), done.\n",
+      "Delta compression using up to 8 threads\n",
+      "Compressing objects: 100% (5/5), done.\n",
+      "Writing objects: 100% (6/6), 1.67 KiB | 1.67 MiB/s, done.\n",
+      "Total 6 (delta 1), reused 0 (delta 0), pack-reused 0\n",
+      "remote: Resolving deltas: 100% (1/1), done.\u001b[K\n",
+      "To https://github.com/shonendumm/classicComputerScienceProblemsPython.git\n",
+      " * [new branch]      master -> master\n",
+      "branch 'master' set up to track 'origin/master'.\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git push --set-upstream origin master"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "f314c846",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Everything up-to-date\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "!git push"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e27373a",
+   "id": "164c57bb",
    "metadata": {},
    "outputs": [],
    "source": []
